--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-stream-example",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Exemplo do uso de Stream de Imagens na Stack Javascript",
   "main": "server.js",
   "dependencies": {
@@ -20,6 +20,7 @@
     "cross-env": "^5.2.0"
   },
   "scripts": {
+    "start": "node server",
     "dev": "cross-env NODE_ENV=development DEBUG=* node server",
     "test": "cross-env NODE_ENV=test DEBUG=simple-stream-example:* node server",
     "prod": "cross-env NODE_ENV=production node server"
