--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-stream-example",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Exemplo do uso de Stream de Imagens na Stack Javascript",
   "main": "server.js",
   "dependencies": {
@@ -24,6 +24,10 @@
     "dev": "cross-env NODE_ENV=development DEBUG=* node server",
     "test": "cross-env NODE_ENV=test DEBUG=simple-stream-example:* node server",
     "prod": "cross-env NODE_ENV=production node server"
+  },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.6.0"
   },
   "repository": {
     "type": "git",
